--- a/CosmeticShop/CosmeticShop.UI/Views/_ViewImports.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CosmeticShop.UI
 @using CosmeticShop.UI.Models
+@using CosmeticShop.Shared.ViewModels
+@using CosmeticShop.Shared.ViewModels.IdentityModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
