--- a/CosmeticShop/CosmeticShop.UI/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Home/Index.cshtml
@@ -1,3 +1,48 @@
-﻿@await Html.PartialAsync("_HeroPartial")
-@await Html.PartialAsync("_BannerSectionPartial")
-@await Html.PartialAsync("_ProductSectionPartial")
+﻿@model List<ProductViewModel>
+@await Html.PartialAsync("_HeroPartial")
+@await Html.PartialAsync("_BannerSectionPartial") 
+<!-- Product Section Begin -->
+<section class="product spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="filter__controls">
+                    <li class="active" data-filter="*">Öne Çıkan Ürünler</li>
+                    <li data-filter=".new-arrivals">New Arrivals</li>
+                    <li data-filter=".hot-sales">Hot Sales</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row product__filter">
+            @foreach (var p in Model)
+            {
+                <div class="col-lg-3 col-md-6 mix new-arrivals hot-sales">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="/images/products/@p.ImageUrl">
+                            <span class="label bg-danger text-white">New</span>
+                            <ul class="product__hover">
+                                <li><a href="#"><img src="images/products/icon/heart.png" alt=""></a></li>
+                                <li><a href="#"><img src="images/products/icon/compare.png" alt=""> <span>Compare</span></a></li>
+                                <li><a href="#"><img src="images/products/icon/search.png" alt=""></a></li>
+                            </ul>
+                        </div>
+                        <div class="product__item__text">
+                            <h6>@p.Name</h6>
+                            <a href="#" class="add-cart">+ Add To Cart</a>
+
+                            <h5>@($"{p.Price:C0}")</h5>
+
+                        </div>
+                    </div>
+                </div>
+            }
+
+
+
+        </div>
+    </div>
+</section>
+<!-- Product Section End -->
+ <div class="container">
+    
+</div> 
