product controller oluşturuldu ürünler listelendi. refactoringler yapılıcak

--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -33,7 +33,10 @@
                                 asp-controller="Home"
                                 asp-action="Index"
                         >Ana Sayfa</a></li>
-                        <li><a href="./shop.html">Galeri</a></li>
+                        <li><a asp-area=""
+                            asp-controller="Product"
+                            asp-action="Index"
+                        >Alışveriş</a></li>
                         <li><a href="#">İletişim</a></li>
                         <li><a href="./blog.html">Blog</a></li>
                         <li><a href="./contact.html">Hakkımızda</a></li>
