--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_BannerSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_BannerSectionPartial.cshtml
@@ -5,7 +5,7 @@
             <div class="col-lg-7 offset-lg-4">
                 <div class="banner__item">
                     <div class="banner__item__pic">
-                        <img src="images/products/banner/banner-1.jpg" alt="">
+                        <img src="images/products/2.png" alt="">
                     </div>
                     <div class="banner__item__text">
                         <h2>Clothing Collections 2030</h2>
@@ -16,7 +16,7 @@
             <div class="col-lg-5">
                 <div class="banner__item banner__item--middle">
                     <div class="banner__item__pic">
-                        <img src="images/products/banner/banner-2.jpg" alt="">
+                        <img src="images/products/3.png" alt="">
                     </div>
                     <div class="banner__item__text">
                         <h2>Accessories</h2>
@@ -27,7 +27,7 @@
             <div class="col-lg-7">
                 <div class="banner__item banner__item--last">
                     <div class="banner__item__pic">
-                        <img src="images/products/banner/banner-3.jpg" alt="">
+                        <img src="images/products/4.png" alt="">
                     </div>
                     <div class="banner__item__text">
                         <h2>Shoes Spring 2030</h2>
