--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeroPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeroPartial.cshtml
@@ -1,16 +1,15 @@
 ﻿ <!-- Hero Section Begin -->
 <section class="hero">
     <div class="hero__slider owl-carousel">
-        <div class="hero__items set-bg" data-setbg="images/products/hero/hero-1.jpg">
+        <div class="hero__items set-bg" data-setbg="images/products/1.png">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-5 col-lg-7 col-md-8">
                         <div class="hero__text">
-                            <h6>Summer Collection</h6>
-                            <h2>Fall - Winter Collections 2030</h2>
+                            <h6>Winter Collection</h6>
+                            <h2>Fall - Winter Collections 2024</h2>
                             <p>
-                                A specialist label creating luxury essentials. Ethically crafted with an unwavering
-                                commitment to exceptional quality.
+                                Böyle özel bir kokuyla günler boyu süren hazza devamm!
                             </p>
                             <a href="#" class="primary-btn">Shop now <span class="arrow_right"></span></a>
                             <div class="hero__social">
@@ -24,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero__items set-bg" data-setbg="images/products/hero/hero-2.jpg">
+        <div class="hero__items set-bg" data-setbg="images/products/2.png">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-5 col-lg-7 col-md-8">
