--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -37,7 +37,7 @@
                             asp-controller="Product"
                             asp-action="Index"
                         >Alışveriş</a></li>
-                        <li><a href="#">İletişim</a></li>
+                        <li><a asp-area="" asp-action="Details" asp-controller="Product">Details</a></li>
                         <li><a href="./blog.html">Blog</a></li>
                         <li><a href="./contact.html">Hakkımızda</a></li>
                     </ul>
