product details yapıldı sayılır methodsal sıkıntı var

--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -28,13 +28,12 @@
                 <nav class="header__menu mobile-menu">
                     <ul>
                         <li class="active">
-                            <a 
-                                asp-area=""
+                            <a  asp-area=""
                                 asp-controller="Home"
                                 asp-action="Index"
                         >Ana Sayfa</a></li>
                         <li><a asp-area=""
-                            asp-controller="Product"
+                            asp-controller="Products"
                             asp-action="Index"
                         >Alışveriş</a></li>
                         <li><a asp-area="" asp-action="Details" asp-controller="Product">Details</a></li>
