--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -62,10 +62,11 @@
             <div class="col-lg-3 col-md-3">
                 <div class="header__nav__option">
                     <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                    <a href="#"><img src="images/products/icon/heart.png" alt=""></a>
-                    <a href="#"><img src="images/products/icon/cart.png" alt=""> <span>0</span></a>
+                    <a href="#"><img src="/images/products/icon/heart.png" alt=""></a>
+                    <a href="#"><img src="/images/products/icon/cart.png" alt=""> <span>0</span></a>
                     <div class="price">$0.00</div>
                 </div>
+            </div>
             </div>
         </div>
         <div class="canvas__open"><i class="fa fa-bars"></i></div>
