--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -63,8 +63,12 @@
                 <div class="header__nav__option">
                     <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                     <a href="#"><img src="/images/products/icon/heart.png" alt=""></a>
-                    <a href="#"><img src="/images/products/icon/cart.png" alt=""> <span>0</span></a>
-                    <div class="price">$0.00</div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        @await Component.InvokeAsync("ShoppingCartNotification", User.Identity.Name ?? null);
+                    }
+
+                    <div class="price"></div>
                 </div>
             </div>
             </div>
