--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/Components/ShoppingCartNotification/Default.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/Components/ShoppingCartNotification/Default.cshtml
@@ -1,13 +1,12 @@
 ﻿@model int
-<li>
-    <a asp-area=""
-       asp-controller="ShoppingCart"
-       asp-action="Index">
-        <span class="icon_cart_alt"></span>
-        @if (Model != 0)
-        {
-            <div class="tip">@Model</div>
-        }
 
-    </a>
-</li>
+<a asp-area=""
+   asp-controller="ShoppingCart"
+   asp-action="Index">
+    <img src="/images/products/icon/cart.png" alt=""> 
+    @if (Model != 0)
+    {
+        <span>@Model</span>
+
+    }
+</a>
