mesajlaşma işlemleri ve ana sayfa düzenleme alışveriş sayfası tamamlandı

--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_BannerSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_BannerSectionPartial.cshtml
@@ -8,8 +8,8 @@
                         <img src="images/products/2.png" alt="">
                     </div>
                     <div class="banner__item__text">
-                        <h2>Clothing Collections 2030</h2>
-                        <a href="#">Shop now</a>
+                        <h2>Yeni Yılda Güzel Kok</h2>
+                        <a asp-area="" asp-controller="Products" asp-action="Index">Hemen Al!</a>
                     </div>
                 </div>
             </div>
@@ -19,8 +19,9 @@
                         <img src="images/products/3.png" alt="">
                     </div>
                     <div class="banner__item__text">
-                        <h2>Accessories</h2>
-                        <a href="#">Shop now</a>
+                        <h2>Tom Ford Hazzı Müthiş </h2>
+                        <a asp-area="" asp-controller="Products" asp-action="Index">Hemen Al!</a>
+
                     </div>
                 </div>
             </div>
@@ -30,8 +31,9 @@
                         <img src="images/products/4.png" alt="">
                     </div>
                     <div class="banner__item__text">
-                        <h2>Shoes Spring 2030</h2>
-                        <a href="#">Shop now</a>
+                        <h2>Gentilmen Erkekler İçin</h2>
+                        <a asp-area="" asp-controller="Products" asp-action="Index">Hemen Al!</a>
+
                     </div>
                 </div>
             </div>
