--- a/CosmeticShop/CosmeticShop.UI/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Home/Index.cshtml
@@ -8,8 +8,7 @@
             <div class="col-lg-12">
                 <ul class="filter__controls">
                     <li class="active" data-filter="*">Öne Çıkan Ürünler</li>
-                    <li data-filter=".new-arrivals">New Arrivals</li>
-                    <li data-filter=".hot-sales">Hot Sales</li>
+                    
                 </ul>
             </div>
         </div>
@@ -36,8 +35,7 @@
                                           asp-action="AddToCart">
                                         <input type="hidden" name="productId" value="@p.Id" />
                                         <input type="hidden" name="quantity" value="1" />
-
-                                        <button type="submit"><a><span class="icon_bag_alt"></span></a></button>
+                                        <button style="border:none;" type="submit"><a class="add-cart">+ Sepete Ekle</a></button>
                                     </form>
                                 
                             }
