--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_FooterSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_FooterSectionPartial.cshtml
@@ -2,63 +2,38 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-md-6 col-sm-6">
                 <div class="footer__about">
                     <div class="footer__logo">
                         <a href="#"><img src="images/products/footer-logo.png" alt=""></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptate tenetur, accusantium.</p>
+                    <p>Hemen dünyaca ünlü parfümlerle tanışmak için sende alışverişe başla.</p>
                     <a href="#"><img src="images/products/payment.png" alt=""></a>
                 </div>
             </div>
-            <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
+            <div class="col-lg-5 offset-lg-1 col-md-3 col-sm-6">
                 <div class="footer__widget">
                     <h6>Shopping</h6>
                     <ul>
-                        <li><a href="#">Clothing Store</a></li>
-                        <li><a href="#">Trending Shoes</a></li>
-                        <li><a href="#">Accessories</a></li>
-                        <li><a href="#">Sale</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Ana Sayfa</a></li>
+                        <li><a asp-area="" asp-controller="Products" asp-action="Index">Alışveriş</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">İletişim</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Hakkımızda</a></li>
+                        
                     </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-6">
-                <div class="footer__widget">
-                    <h6>Shopping</h6>
-                    <ul>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Payment Methods</a></li>
-                        <li><a href="#">Delivary</a></li>
-                        <li><a href="#">Return & Exchanges</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
-                <div class="footer__widget">
-                    <h6>NewLetter</h6>
-                    <div class="footer__newslatter">
-                        <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-                        <form action="#">
-                            <input type="text" placeholder="Your email">
-                            <button type="submit"><span class="icon_mail_alt"></span></button>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="footer__copyright__text">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     <p>
                         Copyright ©
                         <script>
                             document.write(new Date().getFullYear());
                         </script>2020
-                        All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                                                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        <span>by refactoring Mehmet Emir Sürmeli</span>
                     </p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </div>
             </div>
         </div>
