--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeroPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeroPartial.cshtml
@@ -7,11 +7,11 @@
                     <div class="col-xl-5 col-lg-7 col-md-8">
                         <div class="hero__text">
                             <h6>Winter Collection</h6>
-                            <h2>Fall - Winter Collections 2024</h2>
+                            <h2>Diorm Sauvage </h2>
                             <p>
                                 Böyle özel bir kokuyla günler boyu süren hazza devamm!
                             </p>
-                            <a href="#" class="primary-btn">Shop now <span class="arrow_right"></span></a>
+                            <a asp-area="" asp-controller="Products" asp-action="Index" class="primary-btn">Hemen Al! <span class="arrow_right"></span></a>
                             <div class="hero__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -29,12 +29,11 @@
                     <div class="col-xl-5 col-lg-7 col-md-8">
                         <div class="hero__text">
                             <h6>Summer Collection</h6>
-                            <h2>Fall - Winter Collections 2030</h2>
+                            <h2>Avonun Yeni Kokusu FullSpeed</h2>
                             <p>
-                                A specialist label creating luxury essentials. Ethically crafted with an unwavering
-                                commitment to exceptional quality.
+                               Lüks Sevenler için müthiş koku
                             </p>
-                            <a href="#" class="primary-btn">Shop now <span class="arrow_right"></span></a>
+                            <a asp-area="" asp-controller="Products" asp-action="Index" class="primary-btn">Hemen Al! <span class="arrow_right"></span></a>
                             <div class="hero__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
