projede çalışan methodlar çalışmamaya başladı ısvalid false geliyor registerda ve güncelmeme işlemlerinde bir sebepten hata alınıyor araştırılıyor

--- a/CosmeticShop/CosmeticShop.UI/Views/Account/AccessDenied.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Account/AccessDenied.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="product spad">
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-md-12">
                 <p class="alert alert-danger">
