--- a/CosmeticShop/CosmeticShop.UI/Views/Account/ChangePassword.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Account/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ChangePasswordViewModel
-<div class="container w-25">
+<div class="container w-25 mb-5">
     <h1 class="display-4 text-primary">Şifre Değiştirme</h1>
     <hr />
     <form asp-area="" asp-controller="Account" asp-action="ChangePassword" method="post">
