--- a/CosmeticShop/CosmeticShop.UI/Views/Account/ForgotPassword.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="container w-25">
+﻿<div class="container w-25 mb-5">
     <h1 class="display-4 text-primary">Şifre Sıfırlama</h1>
     <hr />
     <form asp-area="" asp-controller="Account" asp-action="ForgotPassword" method="post">
