--- a/CosmeticShop/CosmeticShop.UI/Views/Account/Login.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@model LoginViewModel
-<div class="container w-25 mt-5">
+<div class="container w-25 mt-5 mb-5">
     <h6 class="display-4">Giriş Yap</h6>
     <hr />
     <form asp-area=""
