--- a/CosmeticShop/CosmeticShop.UI/Views/Account/Register.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@model RegisterViewModel
-<div class="container w-50 mt-5">
+<div class="container w-50 mt-5 mb-5">
     <h6 class="display-4">Kayıt Ol</h6>
     <hr />
     <form asp-area=""
