--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_FooterSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_FooterSectionPartial.cshtml
@@ -5,7 +5,8 @@
             <div class="col-lg-5 col-md-6 col-sm-6">
                 <div class="footer__about">
                     <div class="footer__logo">
-                        <a href="#"><img src="images/products/footer-logo.png" alt=""></a>
+                        <a asp-area="" asp-controller="Home" asp-action="Index" class="display-4 text-danger btn-link">CosmeticShop</a>
+
                     </div>
                     <p>Hemen dünyaca ünlü parfümlerle tanışmak için sende alışverişe başla.</p>
                     <a href="#"><img src="images/products/payment.png" alt=""></a>
