--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -53,9 +53,8 @@
                             asp-controller="Products"
                             asp-action="Index"
                         >Alışveriş</a></li>
-                        <li><a asp-area="" asp-action="Details" asp-controller="Product">Details</a></li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Hakkımızda</a></li>
+                        <li><a asp-area="" asp-controller="Iletisim" asp-action="Index">İletişim</a></li>
+                        <li><a asp-area="" asp-controller="Hakkimizda" asp-action="Index">Hakkımızda</a></li>
                     </ul>
                 </nav>
             </div>
