--- a/CosmeticShop/CosmeticShop.UI/Views/Account/ConfirmEmail.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Account/ConfirmEmail.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<div class="container mb-5">
     <h1 class="display-4">Hesap Onay</h1>
     <div asp-validation-summary="All" class="text-danger"></div>
 </div>
