--- a/CosmeticShop/CosmeticShop.UI/Views/Message/NewMessage.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Message/NewMessage.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MessageViewModel
-<div class="container w-25 mt-5">
+<div class="container w-25 mt-5 mb-5">
     <h6 class="display-4">Mesaj Gönder</h6>
     <hr />
     <form asp-area=""
@@ -11,7 +11,6 @@
 
             <div class="col-md-12">
                 <div class="form-group mb-2">
-                    <label asp-for="ToName"></label>
                     <select name="ToId" class="form-control" asp-items="@Model.UserList">
                     </select>
                 </div>
@@ -24,7 +23,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12 mt-4">
+            <div class="col-md-12 ">
                 <button type="submit" class="btn btn-primary w-100">Gönder</button>
             </div>
         </div>
