--- a/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/CosmeticShop/CosmeticShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-3">
                 <div class="header__logo">
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="display-4 text-primary btn-link">CosmeticShop</a>
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="display-4 text-danger btn-link">CosmeticShop</a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
